# project1_-Lamotkin-_-Andrey-_-25-555-

./: README.md  constants.py  main.py  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
